# LeagueApp

./: README.md
db_builder/: .gitignore  build.js  clean_champ_names.json  counter.js  database.js  generate_human_readable_name_file.js  index.js  package-lock.json  package.json  utility.js
leagueapp-frontend/: .gitignore  package-lock.json  package.json
leagueapp-frontend/public/: index.html
leagueapp-frontend/src/: App.js  api.js
leagueapp-frontend/src/assets/: clean_champ_names.json  human_readable_names.json
leagueapp-frontend/src/components/: app-bar.js  champion-display.js  counter-display.js  item-display.js  rune-display.js  searchbar.js  sidebar.js  stats-display.js
leagueapp-frontend/src/pages/: build.js  counter.js  home.js
leagueapp-frontend/src/style/: build-page.css
leagueapp_backend/: .gitignore  Cargo.toml  README.md  Rocket.toml
leagueapp_backend/src/: main.rs  model.rs
