[package]
name = "leagueapp_backend"
version = "0.1.0"
authors = ["kyle o'neill <kyleoneill24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.14.0"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["sqlite_pool", "serve", "json"]